<resources>
    <string name="app_name">FILAFIXML</string>
    <string name="app_title">FILAFI</string>
    <string name="imdb">IMDB</string>
    <string name="detail">Detail</string>
    <string name="app_about">Five Latest Film I Watched</string>
    <string name="rating">Personal Rating:</string>
    <string name="homebutton">Home</string>
    <string name="languagebutton">Language</string>
    <string name="review">Review:</string>
    <string name="english">English</string>
    <string name="indonesia">Bahasa</string>
    <string name="errormsg">The Film Id Was Not Found!</string>

    <string name="homepage">See the Last Five Movies I Watched</string>
    <string name="detailpage">See the Movie Details</string>
    <string name="languagepage">Choose Language</string>


    <string name="title_f01">The Silence of the Lambs (1991)</string>
    <string name="synopsis_f01">Clarice Starling, a young F.B.I. cadet, is given a mission to interview an incarcerated and manipulative cannibal killer named Dr. Hannibal Lecter. This is done to help catch another active serial killer, a madman known as Buffalo Bill, who skins his victims.</string>
    <string name="review_f01">Great acting from the main characters, and excellent editing that successfully conveys the message and builds the audience perception, making the scenes memorable. The horrifying impression is delivered perfectly, and the genius writing makes this movie a masterpiece that leaves a lasting mark on its audience.</string>
    <string name="score_f01">9.5/10</string>
    <string name="imdb_f01">https://www.imdb.com/title/tt0102926/</string>

    <string name="title_f02">Ghost in the Cell (2026)</string>
    <string name="synopsis_f02">Labuan Angsana Prison welcomes a new inmate named Dimas, who is rumored to have brutally murdered his boss. Shortly after his arrival, the entire prison is shocked when several inmates are killed in a horrific manner. The inmates believe the murders are committed by a ghost targeting those with the most negative auras. Consequently, they begin engaging in positive activities to avoid death.</string>
    <string name="review_f02">Great work in creating scenes that are gory yet beautiful. The character interactions are built very well with excellent chemistry. The comedy feels natural and successfully conveys the filmmaker anxieties without distracting the audience. The characters leave a real and lasting impact. Unfortunately, the ending feels like lazy writing, which is a bit bothersome. It could have been better, but it still deserves to be called a good movie.</string>
    <string name="score_f02">8.8/10</string>
    <string name="imdb_f02">https://www.imdb.com/title/tt9000310/</string>

    <string name="title_f03">Project Hail Mary (2026)</string>
    <string name="synopsis_f03">A science teacher named Dr. Ryland Grace wakes up with no memory on a spaceship named Hail Mary. As his memories return, he realizes his mission is to find a solution for the dimming sun caused by an alien parasite called Astrophage. Along the way, he befriends an alien named Rocky who shares the same goal. Together, they work to save the suns in their respective solar systems.</string>
    <string name="review_f03">It is fascinating how this film makes the audience empathize with a friendship between a human and a faceless alien. The science aspect is delivered lightly but still feels genius without making the audience overthink, which is a big plus. Additionally, the beautiful visuals and the supporting score that successfully builds the atmosphere are also positive points. The only weakness is the ending; it felt like it reached a perfect conclusion but then continued unnecessarily.</string>
    <string name="score_f03">9/10</string>
    <string name="imdb_f03">https://www.imdb.com/title/tt12042730/</string>

    <string name="title_f04">1 Kakak 7 Ponakan (2025)</string>
    <string name="synopsis_f04">After the untimely death of his older sister and brother-in-law, Moko, a struggling young architect, suddenly becomes a single parent to his seven nephews and nieces. When an opportunity for a better life arises, he must choose between his love life, his career, or his nephews.</string>
    <string name="review_f04">Moko story of always compromising for his nephews successfully moves the audience to tears. The main characters are given meaningful roles. The beautiful visuals and the fitting music are positive points that I personally love. Some of the acting feels a bit lacking, but it is well covered by the brilliant character writing from director Yandi Laurens.</string>
    <string name="score_f04">9/10</string>
    <string name="imdb_f04">https://www.imdb.com/title/tt32881480/</string>

    <string name="title_f05">Wake Up Dead Man: Knives Out Mystery (2025)</string>
    <string name="synopsis_f05">A young priest, Father Jud Duplenticy, is transferred to become the assistant to Monsignor Jefferson Wicks. After some time, Jud discovers the Monsignor true character, leading to tension between them. Suddenly, during a sermon, Monsignor Wicks is found mysteriously dead, and the accusations point towards Father Jud. Finally, Benoit Blanc steps in to handle the case.</string>
    <string name="review_f05">A refreshing theme compared to the previous two films. The signature Knives Out mystery reveal remains genius. The character conflicts are executed well, and the stunning acting of the actor playing Father Jud is a major positive. However, fans of the first two films might feel slightly uncomfortable at the beginning because this film takes a different approach by focusing on the story of Father Jud and Monsignor Wicks before introducing Detective Benoit Blanc.</string>
    <string name="score_f05">8.7/10</string>
    <string name="imdb_f05">https://www.imdb.com/title/tt14364480/</string>
</resources>