<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/headercard"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvFilm"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >


                <ImageView
                    android:id="@+id/ivImageFilm"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    tools:src="@drawable/sotl"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    >
                </ImageView>
            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/tvTitleFilm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                tools:text="@string/title_f01"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/cvFilm"
                app:layout_constraintEnd_toEndOf="parent"
                >

            </TextView>

            <TextView
                android:id="@+id/tvDescFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                tools:text="@string/synopsis_f01"
                android:maxLines="3"
                android:ellipsize="end"
                android:lineSpacingExtra="2dp"
                android:hyphenationFrequency="normal"
                android:textAlignment="viewStart"
                app:layout_constrainedWidth="true"
                app:layout_constraintTop_toBottomOf="@id/tvTitleFilm"
                app:layout_constraintStart_toEndOf="@id/cvFilm"
                app:layout_constraintEnd_toEndOf="parent"
                >

            </TextView>
            <TextView
                android:id="@+id/tvRatingFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                tools:text="@string/rating"
                app:layout_constraintTop_toBottomOf="@id/tvDescFilm"
                app:layout_constraintStart_toEndOf="@id/cvFilm"
                >

            </TextView>

            <TextView
                android:id="@+id/tvScoreFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                tools:text="@string/score_f01"
                app:layout_constraintTop_toBottomOf="@id/tvDescFilm"
                app:layout_constraintStart_toEndOf="@id/tvRatingFilm"
                >

            </TextView>

            <Button
                android:id="@+id/btIMDB"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="12dp"
                android:text="@string/imdb"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="13sp"
                android:backgroundTint="@color/highlightcard"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/cvFilm"
                app:layout_constraintEnd_toStartOf="@id/btDetails"
                app:layout_constraintTop_toBottomOf="@id/tvScoreFilm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread">

            </Button>

            <Button
                android:id="@+id/btDetails"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="12dp"
                android:text="@string/detail"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="13sp"
                android:padding="6dp"
                android:backgroundTint="@color/highlightcard"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/btIMDB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvScoreFilm"
                app:layout_constraintBottom_toBottomOf="parent">

            </Button>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>